--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "test": "cypress open",
+    "test": "./node_modules/.bin/cypress open",
     "test-report": "rm -rf cypress/results mochawesome-report && cypress run --browser chrome || true && npx mochawesome-merge 'cypress/results/mochawesome_0*.json' > ./cypress/results/mochawesome_all.json && npx marge -f mochawesome ./cypress/results/mochawesome_all.json"
   },
   "dependencies": {
